Hiếu thêm Retryable để tránh 1 service bị sập là cả hệ thống sập