@@ -12,6 +12,8 @@ import com.example.auction.model.Auction;
 import com.example.auction.model.AuctionStatus;
 import com.example.auction.repository.AuctionRepository;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.retry.annotation.Backoff;
+import org.springframework.retry.annotation.Retryable;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
@@ -59,7 +61,6 @@ public class AuctionService implements IAuctionService {
         System.out.println("🆔 Citizen ID Status: " + user.getCitizenIdStatus());
         System.out.println("✅ Old Verified field: " + user.getVerified());
 
-        // Check if citizenIdStatus is APPROVED
         String citizenIdStatus = user.getCitizenIdStatus();
         boolean isApproved = "APPROVED".equals(citizenIdStatus);
 
@@ -68,6 +69,7 @@ public class AuctionService implements IAuctionService {
         return isApproved;
     }
 
+    @Retryable(value = Exception.class, maxAttempts = 3, backoff = @Backoff(delay = 2000))
     public AuctionResponseDTO createAuction(AuctionRequestDTO request, Long requesterId) {
         System.out.println("🔥 === START createAuction ===");
         System.out.println("👤 Requester ID: " + requesterId);
@@ -84,11 +86,9 @@ public class AuctionService implements IAuctionService {
             System.out.println("✅ Seller fetched successfully");
         } catch (Exception ex) {
             System.out.println("❌ Failed to fetch seller: " + ex.getMessage());
-            ex.printStackTrace();
             throw new IllegalStateException("Failed to fetch seller from user-service", ex);
         }
 
-        // Updated verification logic using citizenIdStatus
         System.out.println("🔍 Checking user verification...");
         if (!isUserVerified(seller)) {
             System.out.println("❌ User verification failed");
@@ -98,72 +98,48 @@ public class AuctionService implements IAuctionService {
 
         Integer sellerScore;
         try {
-            System.out.println("🔍 Fetching seller score...");
             sellerScore = userClient.getUserScore(requesterId);
             System.out.println("📊 Seller score: " + sellerScore);
         } catch (Exception ex) {
-            System.out.println("❌ Failed to fetch score: " + ex.getMessage());
-            ex.printStackTrace();
             throw new IllegalStateException("Failed to fetch score from user-service", ex);
         }
 
-        if (sellerScore == null) {
-            System.out.println("❌ Seller score is null, setting to 0");
-            sellerScore = 0;
-        }
+        if (sellerScore == null) sellerScore = 0;
 
         if (sellerScore < 70) {
-            System.out.println("❌ Seller score too low: " + sellerScore);
             throw new IllegalArgumentException("At least 70 points are required to create an auction");
         }
-        System.out.println("✅ Score check passed");
 
-        try {
-            System.out.println("🔍 Creating auction entity...");
-            Auction auction = new Auction();
-            auction.setTitle(request.getTitle());
-            auction.setDescription(request.getDescription());
-            auction.setSellerId(requesterId);
-            auction.setCategoryId(request.getCategoryId());
-            auction.setStartTime(request.getStartTime());
-            auction.setEndTime(request.getEndTime());
-            auction.setStartingPrice(request.getStartingPrice());
-            auction.setIncrementAmount(request.getIncrementAmount());
-            auction.setCurrentBid(request.getCurrentBid());
-            auction.setRequiresDeposit(request.getRequiresDeposit());
-            auction.setSecurityDeposit(request.getSecurityDeposit());
+        Auction auction = new Auction();
+        auction.setTitle(request.getTitle());
+        auction.setDescription(request.getDescription());
+        auction.setSellerId(requesterId);
+        auction.setCategoryId(request.getCategoryId());
+        auction.setStartTime(request.getStartTime());
+        auction.setEndTime(request.getEndTime());
+        auction.setStartingPrice(request.getStartingPrice());
+        auction.setIncrementAmount(request.getIncrementAmount());
+        auction.setCurrentBid(request.getCurrentBid());
+        auction.setRequiresDeposit(request.getRequiresDeposit());
+        auction.setSecurityDeposit(request.getSecurityDeposit());
 
-            if (request.getStatus() != null) {
-                try {
-                    auction.setStatus(AuctionStatus.valueOf(request.getStatus().toUpperCase()));
-                } catch (IllegalArgumentException ex) {
-                    System.out.println("❌ Invalid auction status: " + request.getStatus());
-                    throw new IllegalArgumentException("Invalid auction status");
-                }
-            }
-
-            if (request.getBidCount() != null) {
-                auction.setBidCount(request.getBidCount());
-            }
-
-            System.out.println("💾 Saving auction...");
-            Auction saved = auctionRepository.save(auction);
-            System.out.println("✅ Auction saved with ID: " + saved.getId());
-
-            System.out.println("🔄 Mapping to response DTO...");
-            AuctionResponseDTO response = auctionMapper.mapToResponseDTO(saved);
-            System.out.println("✅ Response DTO created");
-
-            System.out.println("🔥 === END createAuction SUCCESS ===");
-            return response;
-
-        } catch (Exception ex) {
-            System.out.println("❌ Error in auction creation: " + ex.getMessage());
-            ex.printStackTrace();
-            throw ex;
+        if (request.getStatus() != null) {
+            auction.setStatus(AuctionStatus.valueOf(request.getStatus().toUpperCase()));
         }
+        if (request.getBidCount() != null) {
+            auction.setBidCount(request.getBidCount());
+        }
+
+        Auction saved = auctionRepository.save(auction);
+
+        AuctionResponseDTO response = auctionMapper.mapToResponseDTO(saved);
+        response.setUser(seller);
+
+        System.out.println("🔥 === END createAuction SUCCESS ===");
+        return response;
     }
 
+    @Retryable(value = Exception.class, maxAttempts = 3, backoff = @Backoff(delay = 2000))
     public AuctionResponseDTO updateAuction(Long id, AuctionRequestDTO request, Long requesterId) {
         System.out.println("🔥 === START updateAuction ===");
 
@@ -178,14 +154,9 @@ public class AuctionService implements IAuctionService {
             throw new IllegalArgumentException("Seller ID is required");
         }
 
-        try {
-            UserDTO seller = userClient.getUserById(requesterId);
-            // Updated verification logic using citizenIdStatus
-            if (!isUserVerified(seller)) {
-                throw new IllegalArgumentException("Seller not verified or does not exist. Citizen ID must be approved to update auctions.");
-            }
-        } catch (Exception ex) {
-            throw new IllegalStateException("Failed to fetch seller from user-service", ex);
+        UserDTO seller = userClient.getUserById(requesterId);
+        if (!isUserVerified(seller)) {
+            throw new IllegalArgumentException("Seller not verified or does not exist. Citizen ID must be approved to update auctions.");
         }
 
         auction.setTitle(request.getTitle());
@@ -201,19 +172,19 @@ public class AuctionService implements IAuctionService {
         auction.setSecurityDeposit(request.getSecurityDeposit());
 
         if (request.getStatus() != null) {
-            try {
-                auction.setStatus(AuctionStatus.valueOf(request.getStatus().toUpperCase()));
-            } catch (IllegalArgumentException ex) {
-                throw new IllegalArgumentException("Invalid auction status");
-            }
+            auction.setStatus(AuctionStatus.valueOf(request.getStatus().toUpperCase()));
         }
-
         if (request.getBidCount() != null) {
             auction.setBidCount(request.getBidCount());
         }
 
         Auction updated = auctionRepository.save(auction);
-        return auctionMapper.mapToResponseDTO(updated);
+
+        AuctionResponseDTO response = auctionMapper.mapToResponseDTO(updated);
+        response.setUser(seller);
+
+        System.out.println("🔥 === END updateAuction SUCCESS ===");
+        return response;
     }
 
     public void updateCurrentBid(Long auctionId, BigDecimal currentBid, Integer bidCount) {
@@ -226,19 +197,15 @@ public class AuctionService implements IAuctionService {
         auctionRepository.save(auction);
     }
 
+    @Retryable(value = Exception.class, maxAttempts = 3, backoff = @Backoff(delay = 2000))
     @Override
     public AuctionResponseDTO updateAuctionStatus(Long id, String status, Long requesterId) {
         Auction auction = auctionRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Auction not found with id: " + id));
 
-        UserDTO requester;
-        try {
-            requester = userClient.getUserById(requesterId);
-            if (requester == null) {
-                throw new IllegalArgumentException("User not found with id: " + requesterId);
-            }
-        } catch (Exception ex) {
-            throw new IllegalStateException("Failed to verify requester identity", ex);
+        UserDTO requester = userClient.getUserById(requesterId);
+        if (requester == null) {
+            throw new IllegalArgumentException("User not found with id: " + requesterId);
         }
 
         boolean isAdmin = requester.getRoles() != null && requester.getRoles().contains("ADMIN");
@@ -247,33 +214,26 @@ public class AuctionService implements IAuctionService {
             throw new IllegalArgumentException("You don't have permission to update this auction status");
         }
 
-        try {
-            AuctionStatus newStatus = AuctionStatus.valueOf(status.toUpperCase());
-            auction.setStatus(newStatus);
-        } catch (IllegalArgumentException ex) {
-            throw new IllegalArgumentException("Invalid auction status: " + status, ex);
-        }
+        AuctionStatus newStatus = AuctionStatus.valueOf(status.toUpperCase());
+        auction.setStatus(newStatus);
 
         Auction updated = auctionRepository.save(auction);
-        return auctionMapper.mapToResponseDTO(updated);
+
+        AuctionResponseDTO response = auctionMapper.mapToResponseDTO(updated);
+        response.setUser(requester);
+
+        return response;
     }
 
+    @Retryable(value = Exception.class, maxAttempts = 3, backoff = @Backoff(delay = 2000))
     public AuctionResponseDTO updateWinner(Long auctionId, Long winnerId) {
-        System.out.println("🔥 === START updateWinner ===");
-        System.out.println("🆔 Auction ID: " + auctionId);
-        System.out.println("🏆 Winner ID: " + winnerId);
-
         Auction auction = auctionRepository.findById(auctionId)
                 .orElseThrow(() -> new ResourceNotFoundException("Auction not found with id: " + auctionId));
 
         LocalDateTime now = LocalDateTime.now();
-
         boolean ended = auction.getEndTime() != null && auction.getEndTime().isBefore(now);
-        boolean statusClosed = auction.getStatus() == AuctionStatus.CLOSED ||
-                auction.getStatus() == AuctionStatus.SOLD ||
-                auction.getStatus() == AuctionStatus.FAILED;
 
-        if (!ended && !statusClosed) {
+        if (!ended) {
             throw new IllegalStateException("Cannot update winner until auction ends.");
         }
 
@@ -282,34 +242,20 @@ public class AuctionService implements IAuctionService {
         auction.setUpdatedAt(now);
 
         Auction saved = auctionRepository.save(auction);
-        System.out.println("💾 Auction saved successfully");
 
-        // === Gửi email qua user-service ===
         try {
-            System.out.println("📧 Bắt đầu lấy thông tin winner...");
             UserDTO winner = userClient.getUserById(winnerId);
-
-            if (winner == null) {
-                System.err.println("❌ Winner not found!");
-                return auctionMapper.mapToResponseDTO(saved);
-            }
+            if (winner == null) return auctionMapper.mapToResponseDTO(saved);
 
             String winnerEmail = winner.getEmail();
-            System.out.println("📧 Winner email: " + winnerEmail);
-
-            if (winnerEmail == null || winnerEmail.trim().isEmpty()) {
-                System.err.println("❌ Winner email is null or empty!");
-                return auctionMapper.mapToResponseDTO(saved);
-            }
+            if (winnerEmail == null || winnerEmail.isBlank()) return auctionMapper.mapToResponseDTO(saved);
 
             String imageUrl = mediaService.getMainImageUrlByAuctionId(auctionId);
             if (imageUrl == null) {
-                imageUrl = baseUrl + "/static/images/default-auction.png";
+                imageUrl = baseUrl + "/static/default-auction.png";
             }
-            System.out.println("🖼️ Image URL: " + imageUrl);
 
             double finalPrice = auction.getCurrentBid() != null ? auction.getCurrentBid().doubleValue() : 0.0;
-            System.out.println("💰 Final price: " + finalPrice);
 
             AuctionWinEmailRequest emailRequest = new AuctionWinEmailRequest(
                     winnerEmail,
@@ -319,27 +265,16 @@ public class AuctionService implements IAuctionService {
                     finalPrice
             );
 
-            System.out.println("🚀 Chuẩn bị gọi EmailClient...");
-            System.out.println("📧 Email request: " + emailRequest.getEmail());
-            System.out.println("🏆 Title: " + emailRequest.getAuctionTitle());
-
-            // GỌI FEIGN CLIENT
             emailClient.sendAuctionWinnerEmail(emailRequest);
-
-            System.out.println("✅ EmailClient.sendAuctionWinnerEmail() completed");
+            System.out.println("✅ Email gửi thành công tới winner: " + winnerEmail);
 
         } catch (Exception e) {
-            System.err.println("❌ LỖI khi gửi email:");
-            System.err.println("❌ Error type: " + e.getClass().getSimpleName());
-            System.err.println("❌ Error message: " + e.getMessage());
-            e.printStackTrace();
-
-            // Không throw exception để không làm gián đoạn flow chính
-            // Nhưng log lại để debug
+            System.err.println("❌ LỖI gửi email winner: " + e.getMessage());
         }
 
-        System.out.println("🔥 === END updateWinner ===");
-        return auctionMapper.mapToResponseDTO(saved);
+        AuctionResponseDTO response = auctionMapper.mapToResponseDTO(saved);
+        response.setUser(userClient.getUserById(saved.getSellerId()));
+        return response;
     }
 
     public AuctionResponseDTO confirmPayment(Long auctionId, String paymentId) {
@@ -396,6 +331,7 @@ public class AuctionService implements IAuctionService {
         return auctionMapper.mapToResponseDTOList(auctions);
     }
 
+    @Retryable(value = Exception.class, maxAttempts = 3, backoff = @Backoff(delay = 2000))
     public void deleteAuction(Long auctionId, Long requesterId) {
         Auction auction = auctionRepository.findById(auctionId)
                 .orElseThrow(() -> new ResourceNotFoundException("Auction not found with id: " + auctionId));
